--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,9 +1,9 @@
 /* reset*/
-*{
+/**{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
+}*/
 
 /* Couleurs */
 $pink : #FF6D74;
@@ -48,7 +48,7 @@ h2 {
         display: inline-block;
         width: 160px;
         height: 20px;
-        top: 25px;
+        top: 65px;
         left: 50%;
         transform: translateX(-50%);
         background-color: $colorBarTitles;
@@ -125,6 +125,13 @@ body {
     .col:nth-child(4){
         background-color: $greenVueJs;
     }
+}
+
+/******** Bloc Blog ACSEO ********/
+.blog {
+    display: flex;
+    justify-content: space-between;
+
 }
 
 /****** footer ********/
