--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -62,6 +62,7 @@ $blueExtraLight : #61DAFB;
 $greenNodeJs: #83CD29;
 $greenVueJs: #41B883;
 $colorBarTitles: #A7D8DB;
+$fondColor: #F5F5F5;
 
 
 /* Class génériques */
@@ -76,6 +77,9 @@ $colorBarTitles: #A7D8DB;
 }
 .blueLight {
     color: $blueLight;
+}
+.white {
+    color: $white;
 }
 
 .title-for-home {
@@ -131,6 +135,14 @@ $colorBarTitles: #A7D8DB;
         }
     }
 }
+h1 {
+    color: $black;
+    font-size: 60px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: 62px;
+    margin: 30px 0;
+}
 
 h2 {
     position: relative;
@@ -148,9 +160,76 @@ h2 {
         z-index: -1;
     }
 }
-.container {
-    padding-left: 0;
-    padding-right: 0;
+.list-acseo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 30px 0;
+    p {
+        a {
+            margin: 0 20px;
+            padding: 10px 25px;
+            text-decoration: none;
+            color: #C4C4C4;
+            border: 2px solid #C4C4C4;
+            border-radius: 20px;
+            font-size: 22px;
+            font-style: normal;
+            font-weight: 700;
+            min-width: 170px;
+            display: inline-block;
+            text-align: center;
+            &:hover {
+                background-color: $blueDark;
+                border: 2px solid $blueDark;
+                color: $white;
+            }
+        }
+        .list-actif {
+            background-color: $blueDark;
+            color: $white;
+            border: 2px solid $blueDark;
+        }
+    }
+}
+.last-container {
+    h2 {
+        &::before {
+            width: 18%;
+            top: 20%;
+            left: 50%;
+        }
+    }
+}
+.bloc-cercle {
+    position: relative;
+    .cercle {
+        position: absolute;
+        width: 170px;
+        height: 170px;
+        left: 50%;
+        bottom: 80%;
+        transform: translateX(-50%);
+        background-color: $white;
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+}
+.slick-dots {
+    li {
+        button {
+            &::before {
+                content: "" !important; 
+                background-color: $black;
+                width: 30px;
+                height: 30;
+                border-radius: 50px;
+            }
+        }
+    }
+    
 }
 .description {
     width: 800px;
@@ -187,11 +266,10 @@ h2 {
 }
 
 /* Header et menu de navigation */
+/*********** Home page ************/
 body {
-    
     .bloc-menu-navigation {
         justify-content: center;
-
         .nav-item {
             .for-border-left {
                 border-right: 1px solid $blueExtraLight;
@@ -314,20 +392,6 @@ body {
     }
 
 }
-.slick-dots {
-    li {
-        button {
-            &::before {
-                content: "" !important; 
-                background-color: $black;
-                width: 30px;
-                height: 30;
-                border-radius: 50px;
-            }
-        }
-    }
-    
-}
 
 /******** Bloc Blog ACSEO ********/
 .blog-title{
@@ -341,6 +405,148 @@ body {
         opacity: 0.6;
     }
 }
+
+
+
+/******* Expertise page ********/
+.header-expertise {
+    background-color: $blueDark;
+    padding: 70px;
+    img {
+        float: right;
+    }
+}
+.for-expertise {
+    h2 {
+        margin-top: 70px;
+        &::before {
+            width: 57%;
+            top: 70%;
+            left: 29%;
+        }
+    }
+}
+.section-expertise {
+    padding: 7rem 0;
+    background-color: $fondColor;
+    .bloc-expertise {
+        background-color: $white;
+        border-radius: 20px;
+        margin: 10px;
+        padding: 8rem 3rem 2rem 2rem;
+        height: 500px;
+    }
+}
+
+/******** technos & CMS page ********/
+.bloc-logo-technos-all {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 310px;
+    margin: 10px;
+}
+.bloc-logo-technos-1 {
+    background-color: $black; 
+}
+.bloc-logo-technos-2 {
+    background-color: #41B883;
+}
+.bloc-logo-technos-3 {
+    background-color: #54C5F8;
+}
+.bloc-logo-technos-4 {
+    background-color: #83CD29;
+}
+.bloc-logo-technos-5 {
+    background-color: #007DA1;
+}
+.bloc-logo-technos-6 {
+    background-color: #61DAFB;
+}
+.bloc-logo-technos-7 {
+    background-color: #0087BE;
+}
+.bloc-logo-technos-8 {
+    background-color: #3FB499;
+}
+.bloc-logo-technos-9 {
+    background-color: #95BF47;
+}
+.bloc-logo-technos-10 {
+    background-color: #7F54B3;
+}
+.bloc-logo-technos-11 {
+    background-color: #A5DBE8;
+}
+
+/******* Realisations page **********/
+.bloc-r-1 {
+    .col-right {
+        background-color: $blueDark;
+        color: $white;
+        padding: 20px;
+        border-radius: 30px;
+        p{
+            font-size: 22px;
+            font-style: normal;
+            font-weight: 700;
+            line-height: 26px;
+            margin-bottom: 10px;
+        }
+        span {
+            display: inline-block;
+            margin-bottom: 60px;
+            position: relative;
+
+            &::before {
+                position: absolute;
+                content: '';
+                width: 100px;
+                height: 1px;
+                top: 60px;
+                left: 0;
+                background-color: $white;
+            }
+        }
+
+    }
+}
+.bloc-r-2 {
+    .col-right-2 {
+        margin-top: 4rem;
+        padding: 7rem 4rem 4rem 4rem;
+        text-align: center;
+        border-radius: 30px;
+    }
+    .col-right-3 {
+        margin-top: 30px;
+        padding: 3rem;
+        background-color: $blueDark;
+        text-align: center;
+        border-radius: 30px;
+        color: $white;
+        p {
+            font-size: 45px;
+            font-style: normal;
+            font-weight: 700;
+        }
+    }
+}
+.icon-pre-next {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px 0;
+}
+.for-border {
+    border-top: 2px solid #F5F5F5;
+    border-bottom: 2px solid #F5F5F5;
+}
+
+/**** Agence page *******/
+
+
+/******** Equipe page ********/
 
 /****** footer ********/
 footer {
@@ -411,24 +617,22 @@ footer {
         }
     }
 }
-.for-expertise {
-    background-color: $blueDark;
-    padding: 70px;
-    img {
-        float: right;
+
+/****blog****/
+.col-blog-1 {
+    margin-right: 10px;
+
+    .content-blog {
+        margin-left: 10rem;
     }
 }
-
-/**tecno***/
-.bloc-logo-technos {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 310px;
-    background-color: black;
-    margin: 10px;
+.col-blog-2 {
+    margin-left: 10px;
 }
+
     
+
+
 
 .test-slick {
     @include small {
@@ -444,3 +648,4 @@ footer {
     border: 2px solid gray;
     margin: 10px;
 }
+
