--- a/src/assets/scss/slick-theme.scss
+++ b/src/assets/scss/slick-theme.scss
@@ -1,1 +1,1 @@
-@import "../../../../node_modules/carousel-slick/slick/slick-theme.css";
+@import "../../../node_modules/slick-carousel/slick/slick-theme.scss";
